--- a/rpm/kernel-docs.spec.in
+++ b/rpm/kernel-docs.spec.in
@@ -17,6 +17,7 @@
 
 # norootforbuild
 
+%define srcversion @SRCVERSION@
 %define patchversion @PATCHVERSION@
 %define variant @VARIANT@%{nil}
 
@@ -31,7 +32,6 @@ Release:        <RELEASE>.g@COMMIT@
 Release:        @RELEASE@
 %endif
 BuildRequires:  docbook-toys docbook-utils ghostscript_any libjpeg-devel texlive transfig xmlto xorg-x11-devel
-BuildRequires:  kernel-source%variant
 Url:            http://www.kernel.org/
 License:        GPL v2 or later
 Group:          Documentation/Man
@@ -39,7 +39,9 @@ AutoReqProv:    on
 Provides:       %name = %version-%source_rel
 BuildArch:      noarch
 BuildRoot:      %{_tmppath}/%{name}-%{version}-build
-Source:		kernel-spec-macros
+@SOURCES@
+# These files are found in the kernel-source package:
+@NOSOURCE@
 
 %description
 These are the PDF documents and man pages (section 9) built from
@@ -55,16 +57,21 @@ hash_extra.pdfjadetex = 70000
 max_strings.pdfjadetex = 120000
 save_size.pdfjadetex = 10000
 EOF
-%setup -T -c
+%setup -q -c -T -a 0 @UNPACK_PATCHES@
+cp -a linux-%srcversion/{COPYING,CREDITS,MAINTAINERS,README,REPORTING-BUGS} .
+cd linux-%srcversion
+%_sourcedir/apply-patches %_sourcedir/series.conf %my_builddir %symbols
 
 %build
+cd linux-%srcversion
 # use texmf.cnf from local source
 export TEXMFCNF=$RPM_BUILD_DIR
 export LANG=en_US
-make -C /usr/src/linux%variant O=$PWD -k -i mandocs %{?jobs:-j%jobs}
-make -C /usr/src/linux%variant O=$PWD -k -i pdfdocs %{?jobs:-j%jobs}
+make -k -i mandocs %{?jobs:-j%jobs}
+make -k -i pdfdocs %{?jobs:-j%jobs}
 
 %install
+cd linux-%srcversion
 rm -rf $RPM_BUILD_ROOT
 install -d $RPM_BUILD_ROOT/%{_mandir}/man9
 # filter out obscure device drivers - they clutter up the rpm and don't add any real value
@@ -85,8 +92,6 @@ if [ -d Documentation/kdb ] ; then
 fi
 
 ln -s /usr/share/man/man9/request_threaded_irq.9.gz $RPM_BUILD_ROOT/usr/share/man/man9/request_irq.9.gz
-
-cp -a /usr/src/linux%variant/{COPYING,CREDITS,MAINTAINERS,README,REPORTING-BUGS} .
 
 %clean
 rm -rf $RPM_BUILD_ROOT
