rpm/kernel-docs.spec.in: make unpack scripts executable

--- a/rpm/kernel-docs.spec.in
+++ b/rpm/kernel-docs.spec.in
@@ -23,6 +23,8 @@
 
 %include %_sourcedir/kernel-spec-macros
 
+%(chmod +x %_sourcedir/{@SCRIPTS@})
+
 Name:           kernel-docs@VARIANT@
 Summary:        Kernel Documentation
 Version:        @RPMVERSION@
