--- a/blacklist.conf
+++ b/blacklist.conf
@@ -293,6 +293,7 @@ adebc5321852da0b6ed13888e3aa291dfb011072 # ASoC: not needed
 48b2de1971c766a8dc0aec668742e17cb0c75127 # media: not applicable
 5573d124292a01afaecb7612773c21321ffcd6d2 # media: not applicable
 7a4b813cb739ce598ffbad2e84d19d13fa23e25d # r8169: not applicable
+b16503baa8912a5ec5f599914bfdad898588540f # signal: fixes very old bug; depends on huge patchset, see https://lkml.kernel.org/r/87musyl3fa.fsf@xmission.com
 dd5a8f20c28732d7eeaa5a9768676e9045c97ce1 # mfd: already applied
 d39de9919a0cded8ddb1655441cf403ad5690d6d # ath10k: not applicable
 d668dbaebe430af8843ca6e83c1e44fd1efb20aa # ath10k: not applicable
