--- a/series.conf
+++ b/series.conf
@@ -7209,6 +7209,7 @@
 	patches.arch/base-Export-platform_msi_domain_-alloc-free-_irqs.patch
 	patches.fixes/0001-rtmutex-Make-wait_lock-irq-safe.patch
 	patches.suse/0003-perf-x86-add-intel-skylake-uncore-imc-pmu-support.patch
+	patches.fixes/perf-bpf-Convert-perf_event_array-to-use-struct-file.patch
 	patches.drivers/0024-libnvdimm-fix-mode-determination-for-e820-devices.patch
 	patches.drivers/0025-libnvdimm-pfn-fix-restoring-memmap-location.patch
 	patches.drivers/0112-devm_memremap_pages-fix-vmem_altmap-lifetime-alignment-handling.patch
