--- a/series.conf
+++ b/series.conf
@@ -12005,6 +12005,7 @@
 	patches.drivers/qed-sp3-0010-qed-fix-qed_fill_link-error-handling.patch
 	patches.drivers/brcmfmac-add-fallback-for-devices-that-do-not-report
 	patches.drivers/bnx2x-allow-adding-VLANs-while-interface-is-down.patch
+	patches.fixes/bpf-trace-use-READ_ONCE-for-retrieving-file-ptr.patch
 	patches.drivers/bnxt-0086-bnxt_en-Fix-tx-push-race-condition.patch
 	patches.drivers/bnxt-0087-bnxt_en-Enable-and-disable-RX-CTAG-and-RX-STAG-VLAN-.patch
 	patches.drivers/bnxt-0088-bnxt_en-Simplify-VLAN-receive-logic.patch
