--- a/series.conf
+++ b/series.conf
@@ -12123,6 +12123,7 @@
 	patches.fixes/ovs-gre-fix-rtnl-notifications-on-iface-deletion.patch
 	patches.fixes/ovs-geneve-fix-rtnl-notifications-on-iface-deletion.patch
 	patches.drivers/net-mlx4_en-initialize-cmd.context_lock-spinlock-ear.patch
+	patches.fixes/bpf-trace-check-event-type-in-bpf_perf_event_read.patch
 	patches.drivers/net-sfc-avoid-Wtype-limits-warning.patch
 	patches.drivers/mlx4e-Do-not-attempt-to-offload-VXLAN-ports-that-are.patch
 	patches.fixes/netfilter-nf_tables-fix-a-wrong-check-to-skip-the-in.patch
