--- a/blacklist.conf
+++ b/blacklist.conf
@@ -378,6 +378,7 @@ c1fd0abee0d52eb7e2871194b6c79d54792f515f # Dependent patches are too intrusive
 5165674ff5022d8a76f3147d75cab1fecd529497 # not applicable
 63c859101ec32cbc8fa5b708c7f17de63b15e56e # Cosmetic fixes for tools/lib/bpf/Makefile
 ca36960211eb228bcbc7aaebfa0d027368a94c60 # bpf: not applicable
+2d071c643f1cd15a24172de4b5b7ae2adb93abbb # bpf: 1st hunk is needed only for 32-bit systems; 2nd hunk fixes a missing feature
 bb48711800e6d7aedbf4dfd3367e0ab1270a6bea # Kryo not supported
 ec89ab50a03a33a4a648869e868b1964354fb2d1 # ARM64_SW_TTBR0_PAN not enabled
 c545f637f81ebab88c257a243083a879af0b85b7 # Fixes debug code
