--- a/blacklist.conf
+++ b/blacklist.conf
@@ -387,6 +387,7 @@ a64e7a79dd6030479caad603c8d78e6c9c14904f # Not applicable to sp3
 e836e3211229d7307660239cc957f2ab60e6aa00 # just cleanup
 9eb8d7a93c81fdff68189979caff22a058891d15 # drm/mgag200: SUSE patch already papers over it
 1202d4ba2899e083417b7b4fb9b544942fd2b9b7 # Just a change of tracepoint name - possibility to break user's tracing scripts
+8f0994bb8cbde5452e58ce0cacdbf6cb58079d01 # trace: old bug in a benchmark
 2fb4f4eadd180a50112618dd9c5fef7fc50d4f08 # not applicable
 4cd482c12be473ae507eba232a8374c798233e42 # not applicable
 2c4d36b7087538704fc9e3464d185dcc4d04e863 # only a cleanup
