blacklist.conf: Not worth the risk

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -389,6 +389,7 @@ e836e3211229d7307660239cc957f2ab60e6aa00 # just cleanup
 9eb8d7a93c81fdff68189979caff22a058891d15 # drm/mgag200: SUSE patch already papers over it
 1202d4ba2899e083417b7b4fb9b544942fd2b9b7 # Just a change of tracepoint name - possibility to break user's tracing scripts
 8f0994bb8cbde5452e58ce0cacdbf6cb58079d01 # trace: old bug in a benchmark
+15516c89acce948debc4c598e03c3fee53045797 # tracing: Fixes RCU and trace cooperation; Depends on many other changes in kernel_text_address(); Does not seem to worth the risk until any customer report a problem
 d879d0b8c183aabeb9a65eba91f3f9e3c7e7b905 # ftrace: fixes a missing feature; depends on commit 345ddcc882d8896dcbdcb ("ftrace: Have set_ftrace_pid use the bitmap like events do")
 2fb4f4eadd180a50112618dd9c5fef7fc50d4f08 # not applicable
 4cd482c12be473ae507eba232a8374c798233e42 # not applicable
