--- a/series.conf
+++ b/series.conf
@@ -23616,6 +23616,7 @@
 	patches.fixes/0001-xen-x86-add-diagnostic-printout-to-xen_mc_flush-in-c.patch
 	patches.fixes/scsi-lpfc-fix-block-guard-enablement-on-sli3-adapters.patch
 	patches.drivers/net-mlx4_core-Correctly-set-PFC-param-if-global-paus.patch
+	patches.drivers/IB-hfi1-Fix-an-out-of-bounds-access-in-get_hw_stats.patch
 
 	# davem/net
 	patches.drivers/net-ibmvnic-Fix-RTNL-deadlock-during-device-reset.patch
