net: ena: update driver version from 2.0.1 to 2.0.2 (bsc#1108240).

--- a/series.conf
+++ b/series.conf
@@ -23604,6 +23604,7 @@
 	patches.fixes/libceph-fall-back-to-sendmsg-for-slab-pages.patch
 	patches.drivers/net-ena-fix-crash-during-failed-resume-from-hibernat.patch
 	patches.drivers/net-ena-fix-crash-during-ena_remove.patch
+	patches.drivers/net-ena-update-driver-version-from-2.0.1-to-2.0.2.patch
 	patches.drivers/net-ibmnvic-Fix-deadlock-problem-in-reset.patch
 	patches.drivers/ibmvnic-Fix-RX-queue-buffer-cleanup.patch
 	patches.drivers/ibmvnic-Update-driver-queues-after-change-in-ring-si.patch
