scsi: qedi: Add ISCSI_BOOT_SYSFS to Kconfig (bsc#1043083).

--- a/series.conf
+++ b/series.conf
@@ -21455,6 +21455,7 @@
 	patches.drivers/net-mlx5e-Fix-wrong-delay-calculation-for-overflow-c.patch
 	patches.drivers/net-mlx5e-Schedule-overflow-check-work-to-mlx5e-work.patch
 	patches.drivers/net-mlx5-Fix-mlx5_add_flow_rules-call-with-correct-n.patch
+	patches.drivers/scsi-qedi-Add-ISCSI_BOOT_SYSFS-to-Kconfig.patch
 	patches.drivers/scsi-lpfc-fix-linking-against-modular-NVMe-support.patch
 	patches.drivers/scsi-qedi-Fix-return-code-in-qedi_ep_connect.patch
 	patches.drivers/arm64-0003-ACPI-APD-Fix-HID-for-Hisilicon-Hip07-08.patch
