--- a/series.conf
+++ b/series.conf
@@ -23605,6 +23605,7 @@
 	patches.drivers/net-ena-fix-crash-during-failed-resume-from-hibernat.patch
 	patches.drivers/net-ena-fix-crash-during-ena_remove.patch
 	patches.drivers/net-ena-update-driver-version-from-2.0.1-to-2.0.2.patch
+	patches.drivers/qed-Fix-bitmap_weight-check.patch
 	patches.drivers/net-ibmnvic-Fix-deadlock-problem-in-reset.patch
 	patches.drivers/ibmvnic-Fix-RX-queue-buffer-cleanup.patch
 	patches.drivers/ibmvnic-Update-driver-queues-after-change-in-ring-si.patch
