--- a/series.conf
+++ b/series.conf
@@ -23603,6 +23603,7 @@
 	patches.drivers/0003-amd-iommu-fix-guest-virtual-apic-log-tail-address-register
 	patches.fixes/libceph-fall-back-to-sendmsg-for-slab-pages.patch
 	patches.drivers/net-ena-fix-crash-during-failed-resume-from-hibernat.patch
+	patches.drivers/net-ena-fix-crash-during-ena_remove.patch
 	patches.drivers/net-ibmnvic-Fix-deadlock-problem-in-reset.patch
 	patches.drivers/ibmvnic-Fix-RX-queue-buffer-cleanup.patch
 	patches.drivers/ibmvnic-Update-driver-queues-after-change-in-ring-si.patch
