--- a/series.conf
+++ b/series.conf
@@ -23615,6 +23615,7 @@
 	patches.fixes/fscache-fix-race-between-enablement-and-dropping-of-.patch
 	patches.fixes/0001-xen-x86-add-diagnostic-printout-to-xen_mc_flush-in-c.patch
 	patches.fixes/scsi-lpfc-fix-block-guard-enablement-on-sli3-adapters.patch
+	patches.drivers/net-mlx4_core-Correctly-set-PFC-param-if-global-paus.patch
 
 	# davem/net
 	patches.drivers/net-ibmvnic-Fix-RTNL-deadlock-during-device-reset.patch
