tracing: Fix bad use of igrab in trace_uprobe.c (bsc#1120046).

--- a/series.conf
+++ b/series.conf
@@ -23094,6 +23094,7 @@
 	patches.fixes/libceph-un-backoff-on-tick-when-we-have-a-authenticated-session.patch
 	patches.fixes/libceph-reschedule-a-tick-in-finish_hunting.patch
 	patches.fixes/xfs-don-t-fail-when-converting-shortform-attr-to-lon.patch
+	patches.fixes/tracing-Fix-bad-use-of-igrab-in-trace_uprobe.c.patch
 	patches.fixes/bpf-x64-fix-memleak-when-not-converging-after-image.patch
 	patches.drivers/ALSA-hda-Fix-incorrect-usage-of-IS_REACHABLE
 	patches.suse/0001-btrfs-Fix-wrong-first_key-parameter-in-replace_path.patch
