--- a/blacklist.conf
+++ b/blacklist.conf
@@ -380,6 +380,7 @@ c1fd0abee0d52eb7e2871194b6c79d54792f515f # Dependent patches are too intrusive
 ca36960211eb228bcbc7aaebfa0d027368a94c60 # bpf: not applicable
 2d071c643f1cd15a24172de4b5b7ae2adb93abbb # bpf: 1st hunk is needed only for 32-bit systems; 2nd hunk fixes a missing feature
 88a5c690b66110ad255380d8f629c629cf6ca559 # bpf: only for 32-bit systems
+1efb6ee3edea57f57f9fb05dba8dcb3f7333f61f # bpf: only prevents WARN() when using wrong format in bpf_trace_printk()
 bb48711800e6d7aedbf4dfd3367e0ab1270a6bea # Kryo not supported
 ec89ab50a03a33a4a648869e868b1964354fb2d1 # ARM64_SW_TTBR0_PAN not enabled
 c545f637f81ebab88c257a243083a879af0b85b7 # Fixes debug code
