blacklist.conf: graph_trace; possible miscalculation wiht non-default 		options; non-trivial; ignore until people complains

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -393,6 +393,18 @@ e836e3211229d7307660239cc957f2ab60e6aa00 # just cleanup
 15516c89acce948debc4c598e03c3fee53045797 # tracing: Fixes RCU and trace cooperation; Depends on many other changes in kernel_text_address(); Does not seem to worth the risk until any customer report a problem
 d879d0b8c183aabeb9a65eba91f3f9e3c7e7b905 # ftrace: fixes a missing feature; depends on commit 345ddcc882d8896dcbdcb ("ftrace: Have set_ftrace_pid use the bitmap like events do")
 2824f5033248600673e3e126a4d135363cbfd9ac # tracing: snapshots of instances; not worth backporting unless people report bug
+8114865ff82e200b383e46821c25cb0625b842b5 # ftrace: fixes a race when calculating timings in graph_tracer when options/graph-time is set to zero; non-trivial change; let's ignore until anyone complains
+07f7175b43827640d1e69c9eded89aa089a234b4 # ftrace: see above 8114865ff82e200b383
+f1f5b14afd7cce39e6a9b25c685e1ea34c231096 # ftrace: see above 8114865ff82e200b383
+01e0ab2c4ff12358f15a856fd1a7bbea0670972b # ftrace: see above 8114865ff82e200b383
+d48ebb24866edea2c35be02a878f25bc65529370 # ftrace: see above 8114865ff82e200b383
+e949b6db51dc172a35c962bc4414ca148315fe21 # ftrace: see above 8114865ff82e200b383
+18588e1487b19e45bd90bd55ec8d3a1d44f3257f # ftrace: see above 8114865ff82e200b383
+d125f3f866df88da5a85df00291f88f0baa89f7c # ftrace: see above 8114865ff82e200b383
+39eb456dacb543de90d3bc6a8e0ac5cf51ac475e # ftrace: see above 8114865ff82e200b383
+552701dd0fa7c3d448142e87210590ba424694a0 # ftrace: see above 8114865ff82e200b383
+7c6ea35ef50810aa12ab26f21cb858d980881576 # ftrace: see above 8114865ff82e200b383
+b1b35f2e218a5b57d03bbc3b0667d5064570dc60 # ftrace: see above 8114865ff82e200b383
 2fb4f4eadd180a50112618dd9c5fef7fc50d4f08 # not applicable
 4cd482c12be473ae507eba232a8374c798233e42 # not applicable
 2c4d36b7087538704fc9e3464d185dcc4d04e863 # only a cleanup
