--- a/blacklist.conf
+++ b/blacklist.conf
@@ -405,6 +405,7 @@ d125f3f866df88da5a85df00291f88f0baa89f7c # ftrace: see above 8114865ff82e200b383
 552701dd0fa7c3d448142e87210590ba424694a0 # ftrace: see above 8114865ff82e200b383
 7c6ea35ef50810aa12ab26f21cb858d980881576 # ftrace: see above 8114865ff82e200b383
 b1b35f2e218a5b57d03bbc3b0667d5064570dc60 # ftrace: see above 8114865ff82e200b383
+3cec638b3d793b7cacdec5b8072364b41caeb0e1 # ftrace: memory leak when set_trigger_filter() fails; should not normally happen; not worth it
 2fb4f4eadd180a50112618dd9c5fef7fc50d4f08 # not applicable
 4cd482c12be473ae507eba232a8374c798233e42 # not applicable
 2c4d36b7087538704fc9e3464d185dcc4d04e863 # only a cleanup
