tracing: Allow events to have NULL strings (bsc#1120056).

--- a/series.conf
+++ b/series.conf
@@ -23179,6 +23179,8 @@
 	# bsc#1104901
 	patches.fixes/perf-x86-intel-Add-cpu_-prepare-starting-dying-for-c.patch
 
+	patches.fixes/tracing-allow-events-to-have-null-strings.patch
+
 	########################################################
 	# KVM patches
 	########################################################
