blacklist.conf: a4c35ed24112 ("ftrace: Fix synchronization location disabling and freeing ftrace_ops")
Function tracer is disabled.

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -311,3 +311,4 @@ a3ed5f213b8f4708be73df595c2e6709ede416c2 # depends on support for newer firmware
 2e01280d2801c72878cf3a7119eac30077b463d5 # false positive
 67b84999b1a8b1af5625b1eabe92146c5eb42932 # cleanup only
 8a56d7761d2d041ae5e8215d20b4167d8aa93f51 # function graph tracer is disabled
+a4c35ed241129dd142be4cadb1e5a474a56d5464 # function tracer is disabled
