ring-buffer: Fix first commit on sub-buffer having non-zero delta (bsc#1120077).

--- a/series.conf
+++ b/series.conf
@@ -23180,6 +23180,7 @@
 	patches.fixes/perf-x86-intel-Add-cpu_-prepare-starting-dying-for-c.patch
 
 	patches.fixes/tracing-allow-events-to-have-null-strings.patch
+	patches.fixes/ring-buffer-fix-first-commit-on-sub-buffer-having-non-zero-delta.patch
 
 	########################################################
 	# KVM patches
