tracing: Do not add event files for modules that fail tracepoints (bsc#1120086).

--- a/series.conf
+++ b/series.conf
@@ -25046,6 +25046,8 @@
         patches.suse/Use-E-instead-of-X-for-unsigned-module-taint-flag
         patches.suse/ignore-selected-taints-for-tracepoint-modules.patch
 
+	patches.fixes/tracing-do-not-add-event-files-for-modules-that-fail-tracepoints.patch
+
 	########################################################
 	# support for be2iscsi, FATE#313820, bnc#777566
 	########################################################
