blacklist.conf: 97b8ee845393 ("ring-buffer: Fix polling on trace_pipe")
bsc#1120093 for reference. We don't have 15693458c4bc
("tracing/ring-buffer: Move poll wake ups into ring buffer code").

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -312,3 +312,4 @@ a3ed5f213b8f4708be73df595c2e6709ede416c2 # depends on support for newer firmware
 67b84999b1a8b1af5625b1eabe92146c5eb42932 # cleanup only
 8a56d7761d2d041ae5e8215d20b4167d8aa93f51 # function graph tracer is disabled
 a4c35ed241129dd142be4cadb1e5a474a56d5464 # function tracer is disabled
+97b8ee845393701edc06e27ccec2876ff9596019 # we don't have 15693458c4bc0693fd63a50d60f35b628fcf4e29, bsc#1120093
