ring-buffer: Up rb_iter_peek() loop count to 3 (bsc#1120105).

--- a/series.conf
+++ b/series.conf
@@ -23181,6 +23181,7 @@
 
 	patches.fixes/tracing-allow-events-to-have-null-strings.patch
 	patches.fixes/ring-buffer-fix-first-commit-on-sub-buffer-having-non-zero-delta.patch
+	patches.fixes/ring-buffer-up-rb_iter_peek-loop-count-to-3.patch
 
 	########################################################
 	# KVM patches
