--- a/series.conf
+++ b/series.conf
@@ -23182,6 +23182,7 @@
 	patches.fixes/tracing-allow-events-to-have-null-strings.patch
 	patches.fixes/ring-buffer-fix-first-commit-on-sub-buffer-having-non-zero-delta.patch
 	patches.fixes/ring-buffer-up-rb_iter_peek-loop-count-to-3.patch
+	patches.fixes/ring-buffer-always-reset-iterator-to-reader-page.patch
 
 	########################################################
 	# KVM patches
