tracepoints: Do not trace when cpu is offline (bsc#1120109).

--- a/series.conf
+++ b/series.conf
@@ -23183,6 +23183,7 @@
 	patches.fixes/ring-buffer-fix-first-commit-on-sub-buffer-having-non-zero-delta.patch
 	patches.fixes/ring-buffer-up-rb_iter_peek-loop-count-to-3.patch
 	patches.fixes/ring-buffer-always-reset-iterator-to-reader-page.patch
+	patches.fixes/tracepoints-do-not-trace-when-cpu-is-offline.patch
 
 	########################################################
 	# KVM patches
