tracing: Fix check for cpu online when event is disabled (bsc#1120109).

--- a/series.conf
+++ b/series.conf
@@ -23185,6 +23185,7 @@
 	patches.fixes/ring-buffer-always-reset-iterator-to-reader-page.patch
 	patches.fixes/ring-buffer-fix-infinite-spin-in-reading-buffer.patch
 	patches.fixes/tracepoints-do-not-trace-when-cpu-is-offline.patch
+	patches.fixes/tracing-fix-check-for-cpu-online-when-event-is-disabled.patch
 
 	########################################################
 	# KVM patches
