ring-buffer: Have ring_buffer_iter_empty() return true when empty (bsc#1120107).

--- a/series.conf
+++ b/series.conf
@@ -23184,6 +23184,7 @@
 	patches.fixes/ring-buffer-up-rb_iter_peek-loop-count-to-3.patch
 	patches.fixes/ring-buffer-always-reset-iterator-to-reader-page.patch
 	patches.fixes/ring-buffer-fix-infinite-spin-in-reading-buffer.patch
+	patches.fixes/ring-buffer-have-ring_buffer_iter_empty-return-true-when-empty.patch
 	patches.fixes/tracepoints-do-not-trace-when-cpu-is-offline.patch
 	patches.fixes/tracing-fix-check-for-cpu-online-when-event-is-disabled.patch
 
