tracing: Move mutex to protect against resetting of seq data (bsc#1120217).

--- a/series.conf
+++ b/series.conf
@@ -23187,6 +23187,7 @@
 	patches.fixes/ring-buffer-have-ring_buffer_iter_empty-return-true-when-empty.patch
 	patches.fixes/tracepoints-do-not-trace-when-cpu-is-offline.patch
 	patches.fixes/tracing-fix-check-for-cpu-online-when-event-is-disabled.patch
+	patches.fixes/tracing-move-mutex-to-protect-against-resetting-of-seq-data.patch
 
 	########################################################
 	# KVM patches
