tracing: Add #undef to fix compile error (bsc#1120226).

--- a/series.conf
+++ b/series.conf
@@ -23188,6 +23188,7 @@
 	patches.fixes/tracepoints-do-not-trace-when-cpu-is-offline.patch
 	patches.fixes/tracing-fix-check-for-cpu-online-when-event-is-disabled.patch
 	patches.fixes/tracing-move-mutex-to-protect-against-resetting-of-seq-data.patch
+	patches.fixes/tracing-add-undef-to-fix-compile-error.patch
 
 	########################################################
 	# KVM patches
