--- a/blacklist.conf
+++ b/blacklist.conf
@@ -314,3 +314,4 @@ a3ed5f213b8f4708be73df595c2e6709ede416c2 # depends on support for newer firmware
 a4c35ed241129dd142be4cadb1e5a474a56d5464 # function tracer is disabled
 97b8ee845393701edc06e27ccec2876ff9596019 # we don't have 15693458c4bc0693fd63a50d60f35b628fcf4e29, bsc#1120093
 cb86e05390debcc084cfdb0a71ed4c5dbbec517d # preempt and irqsoff tracers are disabled
+82cc4fc2e70ec5baeff8f776f2773abc8b2cc0ae # function tracer is disabled
