--- a/blacklist.conf
+++ b/blacklist.conf
@@ -315,3 +315,4 @@ a4c35ed241129dd142be4cadb1e5a474a56d5464 # function tracer is disabled
 97b8ee845393701edc06e27ccec2876ff9596019 # we don't have 15693458c4bc0693fd63a50d60f35b628fcf4e29, bsc#1120093
 cb86e05390debcc084cfdb0a71ed4c5dbbec517d # preempt and irqsoff tracers are disabled
 82cc4fc2e70ec5baeff8f776f2773abc8b2cc0ae # function tracer is disabled
+acceb72e90624ec6c3f2fc62e72dab892cd075da # duplicate of 82cc4fc2e70ec5baeff8f776f2773abc8b2cc0ae
