--- a/blacklist.conf
+++ b/blacklist.conf
@@ -309,3 +309,4 @@ f0a7d1883d9f78ae7bf15fc258bf9a2b20f35b76 # AFS not supported and we don't have a
 c4ac4496e835b78a45dfbf74f6173932217e4116 # unlikely error case
 a3ed5f213b8f4708be73df595c2e6709ede416c2 # depends on support for newer firmware
 2e01280d2801c72878cf3a7119eac30077b463d5 # false positive
+ac3e233d29f7f77f28243af0132057d378d3ea58 # SLE11 doesn't care about LLD
