blacklist.conf: 46320a6acc4f ("ftrace: Fix selftest goto location on error")
Ftrace selftests are disabled.

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -316,3 +316,4 @@ a4c35ed241129dd142be4cadb1e5a474a56d5464 # function tracer is disabled
 cb86e05390debcc084cfdb0a71ed4c5dbbec517d # preempt and irqsoff tracers are disabled
 82cc4fc2e70ec5baeff8f776f2773abc8b2cc0ae # function tracer is disabled
 acceb72e90624ec6c3f2fc62e72dab892cd075da # duplicate of 82cc4fc2e70ec5baeff8f776f2773abc8b2cc0ae
+46320a6acc4fb58f04bcf78c4c942cc43b20f986 # ftrace selftests
