blacklist.conf: 8dd33bcb7050 ("tracing: Erase irqsoff trace with empty write")
CONFIG_IRQSOFF_TRACER is disabled. Also the code is different and the
fix is not applicable.

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -317,3 +317,4 @@ cb86e05390debcc084cfdb0a71ed4c5dbbec517d # preempt and irqsoff tracers are disab
 82cc4fc2e70ec5baeff8f776f2773abc8b2cc0ae # function tracer is disabled
 acceb72e90624ec6c3f2fc62e72dab892cd075da # duplicate of 82cc4fc2e70ec5baeff8f776f2773abc8b2cc0ae
 46320a6acc4fb58f04bcf78c4c942cc43b20f986 # ftrace selftests
+8dd33bcb7050dd6f8c1432732f930932c9d3a33e # irqsoff tracer is disabled, also not applicable
