ring-buffer: Mask out the info bits when returning buffer page length (bsc#1120094).

--- a/series.conf
+++ b/series.conf
@@ -23190,6 +23190,7 @@
 	patches.fixes/tracing-move-mutex-to-protect-against-resetting-of-seq-data.patch
 	patches.fixes/tracing-add-undef-to-fix-compile-error.patch
 	patches.fixes/tracing-kprobes-allow-to-create-probe-with-a-module-name-starting-with-a-digit.patch
+	patches.fixes/ring-buffer-mask-out-the-info-bits-when-returning-buffer-page-length.patch
 
 	########################################################
 	# KVM patches
