--- a/blacklist.conf
+++ b/blacklist.conf
@@ -319,3 +319,4 @@ acceb72e90624ec6c3f2fc62e72dab892cd075da # duplicate of 82cc4fc2e70ec5baeff8f776
 46320a6acc4fb58f04bcf78c4c942cc43b20f986 # ftrace selftests
 8dd33bcb7050dd6f8c1432732f930932c9d3a33e # irqsoff tracer is disabled, also not applicable
 90e406f96f630c07d631a021fd4af10aac913e77 # memory optimization
+6b7e633fe9c24682df550e5311f47fb524701586 # optimization
