tracing/kprobes: Allow to create probe with a module name starting with a digit (bsc#1120336).

--- a/series.conf
+++ b/series.conf
@@ -23189,6 +23189,7 @@
 	patches.fixes/tracing-fix-check-for-cpu-online-when-event-is-disabled.patch
 	patches.fixes/tracing-move-mutex-to-protect-against-resetting-of-seq-data.patch
 	patches.fixes/tracing-add-undef-to-fix-compile-error.patch
+	patches.fixes/tracing-kprobes-allow-to-create-probe-with-a-module-name-starting-with-a-digit.patch
 
 	########################################################
 	# KVM patches
