--- a/series.conf
+++ b/series.conf
@@ -23191,6 +23191,7 @@
 	patches.fixes/tracing-add-undef-to-fix-compile-error.patch
 	patches.fixes/tracing-kprobes-allow-to-create-probe-with-a-module-name-starting-with-a-digit.patch
 	patches.fixes/ring-buffer-mask-out-the-info-bits-when-returning-buffer-page-length.patch
+	patches.fixes/tracing-probeevent-fix-to-support-minus-offset-from-symbol.patch
 
 	########################################################
 	# KVM patches
