tracing: Fix regex_match_front() to not over compare the test string (bsc#1120223).

--- a/series.conf
+++ b/series.conf
@@ -23192,6 +23192,7 @@
 	patches.fixes/tracing-kprobes-allow-to-create-probe-with-a-module-name-starting-with-a-digit.patch
 	patches.fixes/ring-buffer-mask-out-the-info-bits-when-returning-buffer-page-length.patch
 	patches.fixes/tracing-probeevent-fix-to-support-minus-offset-from-symbol.patch
+	patches.fixes/tracing-fix-regex_match_front-to-not-over-compare-the-test-string.patch
 
 	########################################################
 	# KVM patches
