--- a/series.conf
+++ b/series.conf
@@ -23626,6 +23626,7 @@
 	patches.drivers/net-mlx4_core-Correctly-set-PFC-param-if-global-paus.patch
 	patches.drivers/IB-hfi1-Fix-an-out-of-bounds-access-in-get_hw_stats.patch
 	patches.arch/ibmvnic-Convert-reset-work-item-mutex-to-spin-lock.patch
+	patches.arch/ibmvnic-Fix-non-atomic-memory-allocation-in-IRQ-cont.patch
 	patches.fixes/net-ipv4-do-not-handle-duplicate-fragments-as-overla.patch
 
 	########################################################
