ibmvnic: Convert reset work item mutex to spin lock (FATE#326521).

--- a/series.conf
+++ b/series.conf
@@ -23625,6 +23625,7 @@
 	patches.fixes/ipv4-ipv6-netfilter-Adjust-the-frag-mem-limit-when-t.patch
 	patches.drivers/net-mlx4_core-Correctly-set-PFC-param-if-global-paus.patch
 	patches.drivers/IB-hfi1-Fix-an-out-of-bounds-access-in-get_hw_stats.patch
+	patches.arch/ibmvnic-Convert-reset-work-item-mutex-to-spin-lock.patch
 	patches.fixes/net-ipv4-do-not-handle-duplicate-fragments-as-overla.patch
 
 	########################################################
