scsi: target: drop unused pi_prot_format attribute storage (bsc#1091405).

--- a/series.conf
+++ b/series.conf
@@ -23640,6 +23640,7 @@
 	patches.arch/ibmvnic-Fix-non-atomic-memory-allocation-in-IRQ-cont.patch
 	patches.fixes/net-ipv4-do-not-handle-duplicate-fragments-as-overla.patch
 	patches.fixes/scsi-target-add-emulate_pr-backstore-attr-to-toggle-.patch
+	patches.fixes/scsi-target-drop-unused-pi_prot_format-attribute-sto.patch
 
 	########################################################
 	# end of sorted patches
