--- a/series.conf
+++ b/series.conf
@@ -23639,6 +23639,7 @@
 	patches.arch/ibmvnic-Convert-reset-work-item-mutex-to-spin-lock.patch
 	patches.arch/ibmvnic-Fix-non-atomic-memory-allocation-in-IRQ-cont.patch
 	patches.fixes/net-ipv4-do-not-handle-duplicate-fragments-as-overla.patch
+	patches.fixes/scsi-target-add-emulate_pr-backstore-attr-to-toggle-.patch
 
 	########################################################
 	# end of sorted patches
