target/iscsi: avoid NULL dereference in CHAP auth error path (bsc#1117165).

--- a/series.conf
+++ b/series.conf
@@ -22708,6 +22708,7 @@
 	patches.fixes/ceph-fix-race-of-queuing-delayed-caps.patch
 	patches.fixes/libceph-check-kstrndup-return-value.patch
 	patches.drivers/0004-iommu-vt-d-use-domain-instead-of-cache-fetching
+	patches.fixes/target-iscsi-avoid-NULL-dereference-in-CHAP-auth-err.patch
 	patches.drivers/ibmvnic-Fix-rx-queue-cleanup-for-non-fatal-resets.patch
 	patches.drivers/ibmvnic-Ensure-that-buffers-are-NULL-after-free.patch
 	patches.drivers/ibmvnic-queue-reset-when-CRQ-gets-closed-during-rese.patch
