target: se_dev_attrib.emulate_pr ABI stability (bsc#1091405).

--- a/series.conf
+++ b/series.conf
@@ -24329,6 +24329,7 @@
 	########################################################
 	patches.fixes/target-fix-hang-in-target_wait_for_sess_cmds.patch
 	patches.fixes/target-tcm_fc-work-around-data-corruption-issue-in-tfc_io.patch
+	patches.fixes/target-se_dev_attrib.emulate_pr-ABI-stability.patch
 
 	########################################################
 	# dlm
