blacklist.conf: add a pair of gfs2 commits; we don't support it read-write

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -562,3 +562,5 @@ a7af0af32171c17d881e3e58b0925c4a44fb5a42 # requires other non-stable changes
 34ffec60b27aa81d04e274e71e4c6ef740f75fc7 # bio_allowed_max_sectors() not defined
 dc94902bde1e158cd19c4deab208e5d6eb382a44 # requires other non-stable changes
 1f2cac107c591c24b60b115d6050adc213d10fc0 # breaks KABI on struct request_queue
+6ff9b09e00a441599f3aacdf577254455a048bc9 # we don't allow gfs2 in rw mode
+2d29f6b96d8f80322ed2dd895bca590491c38d34 # we don't allow gfs2 in rw mode
