fscache: Fix race in fscache_op_complete() due to split atomic_sub & read (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -6739,6 +6739,7 @@
 	patches.suse/ubifs-check-for-name-being-null-while-mounting.patch
 	patches.fixes/0001-FS-Cache-Synchronise-object-death-state-change-vs-op.patch
 	patches.fixes/locks-fix-unlock-when-fcntl_setlk-races-with-a-close.patch
+	patches.fixes/fscache-Fix-race-in-fscache_op_complete-due-to-split.patch
 
 	########################################################
 	# Swap-over-NFS
