--- a/series.conf
+++ b/series.conf
@@ -6910,6 +6910,7 @@
 	patches.fixes/nlm-Ensure-callback-code-also-checks-that-the-files-.patch
 	patches.fixes/svc-Avoid-garbage-replies-when-pc_func-returns-rpc_d.patch
 	patches.fixes/svcrpc-don-t-leak-contexts-on-PROC_DESTROY.patch
+	patches.fixes/NFSv4-Don-t-exit-the-state-manager-without-clearing-.patch
 
 	########################################################
 	# Netfilter
