SUNRPC: Fix a potential race in xprt_connect() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -6911,6 +6911,7 @@
 	patches.fixes/svc-Avoid-garbage-replies-when-pc_func-returns-rpc_d.patch
 	patches.fixes/svcrpc-don-t-leak-contexts-on-PROC_DESTROY.patch
 	patches.fixes/NFSv4-Don-t-exit-the-state-manager-without-clearing-.patch
+	patches.fixes/SUNRPC-Fix-a-potential-race-in-xprt_connect.patch
 
 	########################################################
 	# Netfilter
