NFSv4: Don't exit the state manager without clearing NFS4CLNT_MANAGER_RUNNING (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -23615,6 +23615,7 @@
 	patches.arch/acpi-nfit-x86-mce-handle-only-uncorrectable-machine-checks.patch
 	patches.arch/acpi-nfit-x86-mce-validate-a-mce-s-address-before-using-it.patch
 	patches.drivers/ibmvnic-fix-accelerated-VLAN-handling.patch
+	patches.fixes/NFSv4-Don-t-exit-the-state-manager-without-clearing-.patch
 	patches.fixes/0001-floppy-fix-race-condition-in-__floppy_read_block_0.patch
 	patches.drivers/xhci-add-quirk-to-workaround-the-errata-seen-on-cavium-thunder-x2-soc.patch
 	patches.drivers/0003-amd-iommu-fix-guest-virtual-apic-log-tail-address-register
