--- a/series.conf
+++ b/series.conf
@@ -23634,6 +23634,7 @@
 	patches.fixes/fscache-fix-race-between-enablement-and-dropping-of-.patch
 	patches.fixes/0001-xen-x86-add-diagnostic-printout-to-xen_mc_flush-in-c.patch
 	patches.fixes/scsi-lpfc-fix-block-guard-enablement-on-sli3-adapters.patch
+	patches.fixes/SUNRPC-Fix-a-potential-race-in-xprt_connect.patch
 	patches.drivers/net-ibmvnic-Fix-RTNL-deadlock-during-device-reset.patch
 	patches.fixes/ipv4-ipv6-netfilter-Adjust-the-frag-mem-limit-when-t.patch
 	patches.drivers/net-mlx4_core-Correctly-set-PFC-param-if-global-paus.patch
