--- a/blacklist.conf
+++ b/blacklist.conf
@@ -564,3 +564,5 @@ dc94902bde1e158cd19c4deab208e5d6eb382a44 # requires other non-stable changes
 1f2cac107c591c24b60b115d6050adc213d10fc0 # breaks KABI on struct request_queue
 6ff9b09e00a441599f3aacdf577254455a048bc9 # we don't allow gfs2 in rw mode
 2d29f6b96d8f80322ed2dd895bca590491c38d34 # we don't allow gfs2 in rw mode
+b5f0afbea4f2ea52c613ac2b06cb6de2ea18cb6d # minor bug, major backport effort - regressoin likely
+31e62d25b5b8155b2ff6a7c6d31256475dbbcc7a # not-a-bug, more of a clean-up
