btrfs: Enhance btrfs_trim_fs function to handle error  better (Dependency for bsc#1113667).

--- a/series.conf
+++ b/series.conf
@@ -5198,6 +5198,7 @@
 	patches.suse/0001-btrfs-scrub-Don-t-use-inode-page-cache-in-scrub_hand.patch
 	patches.suse/btrfs-fix-quick-exhaustion-of-the-system-array-in-th.patch
 	patches.suse/btrfs-fix-deadlock-when-finalizing-block-group-creation.patch
+	patches.fixes/0001-btrfs-Enhance-btrfs_trim_fs-function-to-handle-error.patch
 
 	# Non-upstreamed btrfs patches
 	patches.suse/btrfs-1009-fixup-writeback_inodes_sb-wrappers-use.patch
