--- a/series.conf
+++ b/series.conf
@@ -5199,6 +5199,7 @@
 	patches.suse/btrfs-fix-quick-exhaustion-of-the-system-array-in-th.patch
 	patches.suse/btrfs-fix-deadlock-when-finalizing-block-group-creation.patch
 	patches.fixes/0001-btrfs-Enhance-btrfs_trim_fs-function-to-handle-error.patch
+	patches.fixes/0002-btrfs-Ensure-btrfs_trim_fs-can-trim-the-whole-filesy.patch
 
 	# Non-upstreamed btrfs patches
 	patches.suse/btrfs-1009-fixup-writeback_inodes_sb-wrappers-use.patch
