KVM: x86: Fix the duplicated failure path handling in vmx_init (bsc#1104367).

--- a/series.conf
+++ b/series.conf
@@ -25586,6 +25586,7 @@
 	patches.fixes/block-allow-gendisk-s-request_queue-registration-to-.patch
 	patches.fixes/dm-fix-incomplete-request_queue-initialization.patch
 	patches.fixes/dm-only-initialize-the-request_queue-once.patch
+
 	########################################################
 	# You'd better have a good reason for adding a patch
 	# below here.
@@ -25857,6 +25858,9 @@
 	patches.kabi/KVM-VMX-Work-around-kABI-breakage-in-enum-vmx_l1d_fl.patch
 
 	patches.fixes/0001-x86-paravirt-Fix-some-warning-messages.patch
+
+	# bsc#1104367
+	patches.fixes/Fix-the-duplicated-failure-path-handling-in-vmx_init.patch
 
 ########################################################
 # xen architecture, version 3
