btrfs: Handle error from btrfs_uuid_tree_rem call in _btrfs_ioctl_set_received_subvol (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -22896,6 +22896,7 @@
 	patches.fixes/0001-xfs-convert-XFS_AGFL_SIZE-to-a-helper-function.patch
 	patches.fixes/xfs-do-not-log-recover-swapext-extent-owner-changes-.patch
 	patches.suse/0014-btrfs-tree-checker-Replace-root-parameter-with-fs_in.patch
+	patches.suse/btrfs-handle-error-from-btrfs_uuid_tree_rem-call-in-btrfs_ioctl_set_received_subvol.patch
 	patches.suse/0007-btrfs-qgroup-Skeleton-to-support-separate-qgroup-res.patch
 	patches.suse/0008-btrfs-qgroup-Introduce-helpers-to-update-and-access-.patch
 	patches.suse/0009-btrfs-qgroup-Make-qgroup_reserve-and-its-callers-to-.patch
