--- a/blacklist.conf
+++ b/blacklist.conf
@@ -566,3 +566,4 @@ dc94902bde1e158cd19c4deab208e5d6eb382a44 # requires other non-stable changes
 2d29f6b96d8f80322ed2dd895bca590491c38d34 # we don't allow gfs2 in rw mode
 b5f0afbea4f2ea52c613ac2b06cb6de2ea18cb6d # minor bug, major backport effort - regressoin likely
 31e62d25b5b8155b2ff6a7c6d31256475dbbcc7a # not-a-bug, more of a clean-up
+6d7225f0cc1a1fc32cf5dd01b4ab4b8a34c7cdb4 # we do not have memalloc_noio_save, also not critical
