ixgbe: fix possible race in reset subtask (bsc#1101557).

--- a/series.conf
+++ b/series.conf
@@ -23205,6 +23205,7 @@
 	patches.fixes/ipv6-omit-traffic-class-when-calculating-flow-hash.patch
 	patches.drivers/Bluetooth-Apply-QCA-Rome-patches-for-some-ATH3021-modules
 	patches.fixes/e1000e-Ignore-TSYNCRXCTL-when-getting-I219-clock-att.patch
+	patches.drivers/ixgbe-fix-possible-race-in-reset-subtask.patch
 	patches.arch/powerpc-fadump-exclude-memory-holes-while-reserving-.patch
 	patches.arch/powerpc-fadump-Do-not-use-hugepages-when-fadump-is-a.patch
 	patches.arch/powerpc-lib-Fix-the-feature-fixup-tests-to-actually-.patch
