ixgbe: Refactor queue disable logic to take completion time into account (bsc#1101557).

--- a/series.conf
+++ b/series.conf
@@ -23422,6 +23422,7 @@
 	patches.drivers/be2net-remove-unused-old-custom-busy-poll-fields.patch
 	patches.drivers/net-mlx5-Add-missing-SET_DRIVER_VERSION-command-tran.patch
 	patches.drivers/ixgbe-Reorder-Tx-Rx-shutdown-to-reduce-time-needed-t.patch
+	patches.drivers/ixgbe-Refactor-queue-disable-logic-to-take-completio.patch
 	patches.drivers/0016-net-ethernet-mvneta-Fix-napi-structure-mixup-on-arma.patch
 	patches.fixes/ip-discard-ipv4-datagrams-with-overlapping-segments.patch
 	patches.fixes/ipv6-defrag-drop-non-last-frags-smaller-than-min-mtu.patch
