--- a/series.conf
+++ b/series.conf
@@ -23421,6 +23421,7 @@
 	patches.drivers/0092-bcache-fix-error-setting-writeback_rate-through-sysf.patch
 	patches.drivers/be2net-remove-unused-old-custom-busy-poll-fields.patch
 	patches.drivers/net-mlx5-Add-missing-SET_DRIVER_VERSION-command-tran.patch
+	patches.drivers/ixgbe-Reorder-Tx-Rx-shutdown-to-reduce-time-needed-t.patch
 	patches.drivers/0016-net-ethernet-mvneta-Fix-napi-structure-mixup-on-arma.patch
 	patches.fixes/ip-discard-ipv4-datagrams-with-overlapping-segments.patch
 	patches.fixes/ipv6-defrag-drop-non-last-frags-smaller-than-min-mtu.patch
