blacklist.conf: not worth backporting

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -323,3 +323,4 @@ acceb72e90624ec6c3f2fc62e72dab892cd075da # duplicate of 82cc4fc2e70ec5baeff8f776
 6b7e633fe9c24682df550e5311f47fb524701586 # optimization
 1fe4293f4b8de75824935f8d8e9a99c7fc6873da # function graph tracer is disabled
 8a03e81cb14712f986c5d5fa42a30ff2cbe3237c # no powernv code on SLE11
+9b94a8fba501f38368aef6ac1b30e7335252a220 # ring_buffer: less critical on SLE11 because there is used "unsigned" instead of "int" for the buffer size; need a root; would need > 8TB memory per-CPU even when it works
