ixgbe: Make use of order 1 pages and 3K buffers independent of FCoE (bsc#1100105).

--- a/series.conf
+++ b/series.conf
@@ -18736,6 +18736,7 @@
 	patches.drivers/ixgbe-Only-DMA-sync-frame-length.patch
 	patches.drivers/ixgbe-Update-driver-to-make-use-of-DMA-attributes-in.patch
 	patches.drivers/ixgbe-Update-code-to-better-handle-incrementing-page.patch
+	patches.drivers/ixgbe-Make-use-of-order-1-pages-and-3K-buffers-indep.patch
 	patches.drivers/mlx4-do-not-fire-tasklet-unless-necessary.patch
 	patches.drivers/net-mvneta-make-mvneta_eth_tool_ops-static.patch
 	patches.suse/0001-ath10k-convert-warning-about-non-existent-OTP-board-.patch
