ixgbe: Add function for checking to see if we can reuse page (bsc#1100105).

--- a/series.conf
+++ b/series.conf
@@ -18732,6 +18732,7 @@
 	patches.drivers/cxgb4-0131-cxgb4-Increase-max-number-of-tc-u32-links.patch
 	patches.drivers/cxgb4-0132-cxgb4-Add-new-T5-and-T6-pci-device-id-s.patch
 	patches.drivers/cxgb4-0133-cxgb4-Remove-redundant-code-in-t4_uld_clean_up.patch
+	patches.drivers/ixgbe-Add-function-for-checking-to-see-if-we-can-reu.patch
 	patches.drivers/mlx4-do-not-fire-tasklet-unless-necessary.patch
 	patches.drivers/net-mvneta-make-mvneta_eth_tool_ops-static.patch
 	patches.suse/0001-ath10k-convert-warning-about-non-existent-OTP-board-.patch
