ixgbe: Fix output from ixgbe_dump (bsc#1100105).

--- a/series.conf
+++ b/series.conf
@@ -19960,6 +19960,7 @@
 	patches.drivers/qed-sp3-0223-qede-Add-aRFS-support.patch
 	patches.suse/msft-hv-1328-netvsc-fix-RCU-warning-in-get_stats.patch
 	patches.suse/msft-hv-1329-hv_netvsc-change-netvsc-device-default-duplex-to-FUL.patch
+	patches.drivers/ixgbe-Fix-output-from-ixgbe_dump.patch
 	patches.drivers/qed-sp3-0224-qede-allocate-enough-data-for-arfs_fltr_bmap.patch
 	patches.drivers/ibmvnic-46-Report-errors-when-failing-to-release-sub-cr.patch
 	patches.drivers/ibmvnic-47-Fix-ibmvnic_change_mac_addr-struct-format.patch
