--- a/series.conf
+++ b/series.conf
@@ -18739,6 +18739,7 @@
 	patches.drivers/ixgbe-Make-use-of-order-1-pages-and-3K-buffers-indep.patch
 	patches.drivers/ixgbe-Use-length-to-determine-if-descriptor-is-done.patch
 	patches.drivers/ixgbe-Break-out-Rx-buffer-page-management.patch
+	patches.drivers/ixgbe-Add-support-for-padding-packet.patch
 	patches.drivers/mlx4-do-not-fire-tasklet-unless-necessary.patch
 	patches.drivers/net-mvneta-make-mvneta_eth_tool_ops-static.patch
 	patches.suse/0001-ath10k-convert-warning-about-non-existent-OTP-board-.patch
