blacklist.conf: Blacklist fb265c9cb49e

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -567,3 +567,4 @@ dc94902bde1e158cd19c4deab208e5d6eb382a44 # requires other non-stable changes
 b5f0afbea4f2ea52c613ac2b06cb6de2ea18cb6d # minor bug, major backport effort - regressoin likely
 31e62d25b5b8155b2ff6a7c6d31256475dbbcc7a # not-a-bug, more of a clean-up
 6d7225f0cc1a1fc32cf5dd01b4ab4b8a34c7cdb4 # we do not have memalloc_noio_save, also not critical
+fb265c9cb49e2074ddcdd4de99728aefdd3b3592 # Intrusive patch, mostly cleanup, fixes only long-standing error code mismatch
