--- a/blacklist.conf
+++ b/blacklist.conf
@@ -188,6 +188,7 @@ bfedb589252c01fa505ac9f6f2a3d5d68d707ef4 # bnc1044228
 c65540453e150844367ffe98e45d5175181b2ec1 # unsupported platform
 a9f8553e935f26cb5447f67e280946b0923cd2dc # depends on features we don't have
 2bdd713b92a9cade239d3c7d15205a09f556624d # bsc#1066471 - crypto_memneq() only on >= v3.13-rc2
+b1e3874c75ab15288f573b3532e507c37e8e7656 # pcrypt: internal API, used correctly everywhere; bsc#1120950
 2b1be689f3aadcfe0a768314c80e43483c784659 # non-trivial backport, visible only when debugging with a particular early consoles, did not reported for years
 1f6ae47ecff7f23da73417e068018b311f3b5583 # PCI ASPM fix - not applicable cleanly
 14fc42fa1b3e7ea5160c84d0e686a3a0c1ffe619 # non-critical perf tools fix, no backport without customer bug
