blacklist.conf: pcrypt: internal API, used correctly everywhere 		(bsc#1120950)

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -153,6 +153,7 @@ e91455a1495ada59e90ae26bc3e68be3b7656570 # possible kabi breakage
 0c32b8ec02832df167e16ad659cb11dc148f2ddf # not applicable
 9933e113c2e87a9f46a40fde8dafbf801dca1ab9 # not applicable
 b32e4482aadfd1322357f46d4ed8a990603664d9 # fs/crypto is not in 4.4 yet
+b1e3874c75ab15288f573b3532e507c37e8e7656 # pcrypt: internal API, used correctly everywhere; bsc#1120950
 33496c3c3d7b88dcbe5e55aa01288b05646c6aca # API change
 61e8a0d5a0270b91581f6c715036844b2ea98da1 # PPC BE only (bsc#989311)
 4a6772f514891eaacf26bcb7c2c808c557d23c6f # duplicated defines cleanup; no need
