--- a/series.conf
+++ b/series.conf
@@ -23645,6 +23645,7 @@
 	patches.arch/ibmvnic-Convert-reset-work-item-mutex-to-spin-lock.patch
 	patches.arch/ibmvnic-Fix-non-atomic-memory-allocation-in-IRQ-cont.patch
 	patches.fixes/net-ipv4-do-not-handle-duplicate-fragments-as-overla.patch
+	patches.fixes/xfs-Align-compat-attrlist_by_handle-with-native-impl.patch
 	patches.fixes/scsi-target-add-emulate_pr-backstore-attr-to-toggle-.patch
 	patches.fixes/scsi-target-drop-unused-pi_prot_format-attribute-sto.patch
 
